Bug fix for IE rest call
The rest call to retrieve the list name of a particular result caused a
problem in IE. It returns a different object compared to Chrome.

--- a/Search Display Templates/Retrieve the list name in a display template/Item_Listname.html
+++ b/Search Display Templates/Retrieve the list name in a display template/Item_Listname.html
@@ -77,11 +77,23 @@
                             if (request.status === 200) {
                                 // List retrieved
                                 var data = JSON.parse(request.response);
-                                if ($isEmptyString(data.Title)) {
+                                if (typeof data.Title !== "undefined") {
+                                    if ($isEmptyString(data.Title)) {
+                                        return;
+                                    }
+                                    // Store the list name
+                                    listInfo[listId]["Title"] = data.Title;
+                                } else if (typeof data.d !== "undefined") {
+                                    if (typeof data.d.Title !== "undefined") {
+                                        if ($isEmptyString(data.d.Title)) {
+                                            return;
+                                        }
+                                        // Store the list name
+                                        listInfo[listId]["Title"] = data.d.Title;
+                                    }
+                                } else {
                                     return;
                                 }
-                                // Store the list name
-                                listInfo[listId]["Title"] = data.Title;
                                 // Render the list name
                                 render(elmId, listId);
                             } else {
