--- a/Search Display Templates/Table Layout with Multi Sort Templates (CSWP)/Control_List_Table.html
+++ b/Search Display Templates/Table Layout with Multi Sort Templates (CSWP)/Control_List_Table.html
@@ -293,8 +293,9 @@
                                 var previewURL = elm.getAttribute('preview');
                                 calloutOptions.content = "";
                                 if(previewURL && previewURL.length > 0) {
+                                    previewURL = previewURL.replace('WopiFrame.aspx','WopiFrame2.aspx');                  
                                     calloutOptions.contentWidth = 400;
-                                    calloutOptions.content = String.format('<div style="height:400px;margin-top:11px;margin-bottom:36px"><iframe src="{0}" scrolling="no" frameborder="0px" style="width:100%;height:100%"></iframe></div>', elm.getAttribute('preview'));
+                                    calloutOptions.content = String.format('<div style="height:400px;margin-top:11px;margin-bottom:36px"><iframe src="{0}" scrolling="no" frameborder="0px" style="width:100%;height:100%"></iframe></div>', previewURL);
                                 }
 
                                 calloutOptions.content += String.format('<div class="js-callout-footerArea" style="margin:25px 0 -25px 0;margin-top: -14px;margin-bottom: -25px;position: absolute;margin-left: -20px;width: 360px;">' +
