--- a/Search Display Templates/Table Layout with Multi Sort Templates (CSWP)/Control_List_Table.html
+++ b/Search Display Templates/Table Layout with Multi Sort Templates (CSWP)/Control_List_Table.html
@@ -22,13 +22,50 @@
          * Show property sorting options *
          *********************************/
         estruyf.Table.Layout = function() {
-            var tableContext = {};
+            var tableContext = {},
+                styleAdded = false;
+
+            var styles = (function() {/*
+                .table-hover-wopi {
+                    height:400px;
+                    margin-bottom:36px;
+                    margin-top:11px;
+                }
+                .table-hover-footer {
+                    margin:-14px 0 -25px -20px;
+                    position: absolute;
+                    width: 360px;
+                }
+                    .table-hover-footer a, 
+                    .table-hover-footer a:visited {
+                        color: #262626;
+                    }
+                    .table-hover-footer .js-callout-action a {
+                        text-decoration: none;
+                    }
+            */}).toString().slice(15, -3);
+
             return {
                 setContext: function (context, cc, tableId) {
                     tableContext[tableId] = {};
                     estruyf.Table.Layout.setCurrentCtx(context, tableId);
                     estruyf.Table.Layout.setClientControl(cc, tableId);
                     estruyf.Table.Layout.setProperties(cc, tableId);
+
+                    if (!styleAdded) {
+                        var head = document.head || document.getElementsByTagName('head')[0],
+                            style = document.createElement('style');
+        
+                        style.type = 'text/css';
+                        if (style.styleSheet){
+                            style.styleSheet.cssText = styles;
+                        } else {
+                            style.appendChild(document.createTextNode(styles));
+                        }
+                        head.appendChild(style);
+                        // Set added to true, to not read the CSS code to the page
+                        styleAdded = true;
+                    }
                 },
                 setCurrentCtx: function (context, tableId) {
                     tableContext[tableId]["currentCtx"] = context;
@@ -295,10 +332,10 @@
                                 if(previewURL && previewURL.length > 0) {
                                     previewURL = previewURL.replace('WopiFrame.aspx','WopiFrame2.aspx');                  
                                     calloutOptions.contentWidth = 400;
-                                    calloutOptions.content = String.format('<div style="height:400px;margin-top:11px;margin-bottom:36px"><iframe src="{0}" scrolling="no" frameborder="0px" style="width:100%;height:100%"></iframe></div>', previewURL);
+                                    calloutOptions.content = String.format('<div class="table-hover-wopi"><iframe src="{0}" scrolling="no" frameborder="0px" style="width:100%;height:100%"></iframe></div>', previewURL);
                                 }
 
-                                calloutOptions.content += String.format('<div class="js-callout-footerArea" style="margin:25px 0 -25px 0;margin-top: -14px;margin-bottom: -25px;position: absolute;margin-left: -20px;width: 360px;">' +
+                                calloutOptions.content += String.format('<div class="js-callout-footerArea table-hover-footer">' +
                                                                             '<span class="js-callout-action">' +
                                                                                 '<a href="{0}&PageType=4" onclick="estruyf.Table.Callout.redirectToPropertiesUrl(this, \'{1}\');return false;" title="View properties" class="ms-calloutLink ms-calloutLinkEnabled">View properties</a>' +
                                                                             '</span>' +
