Added check for jQuery
Alert if missing.

--- a/Search Display Templates/mAdcOW Search Center Templates/mAdcOWGraph/mAdcOW_Control_Graph.html
+++ b/Search Display Templates/mAdcOW Search Center Templates/mAdcOWGraph/mAdcOW_Control_Graph.html
@@ -103,6 +103,10 @@ _#-->
 <!--#_
 var cardContainer;
 AddPostRenderCallback(ctx, function() {
+	if(!jQuery) {
+		alert("You need to include jQuery on the page for the Delve clone to work");
+		return;
+	}
 	cardContainer = jQuery('#cardcontainer');
 	cardContainer.masonry({
 		  gutter: 10,
